log
Thu Apr 30 05:54:07 PM UTC 2026: 
 tests:  1|8
total_score: 0/60
b389e7d
Thu Apr 30 06:02:34 PM UTC 2026: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/60
eb83c53
Thu Apr 30 06:03:13 PM UTC 2026: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|7
total_score: 5/60
9ef2715
Thu Apr 30 06:17:25 PM UTC 2026: 
 treemap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:63:20: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   63 |     int llaveOri = (int *) key;
      |                    ^
treemap.c:66:24: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   66 |         int llaveAux = (int *) auxiliar->pair->key;
      |                        ^
9018af8
Thu Apr 30 06:18:43 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:66:24: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   66 |         int llaveAux = (int *) auxiliar->pair->key;
      |                        ^
treemap.c:68:21: error: comparison between pointer and integer [-Werror]
   68 |         if(llaveAux == llaveOri){
      |                     ^~
treemap.c:72:26: error: comparison between pointer and integer [-Werror]
   72 |         else if(llaveAux > llaveOri){
      |                          ^
cc1: all warnings being treated as errors
0fd2f55
Thu Apr 30 06:19:12 PM UTC 2026: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  6|7
total_score: 5/60
7e0ef54
Thu Apr 30 06:19:53 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/60
aa64f44
Fri May  1 01:36:29 AM UTC 2026: 
 treemap.c | 46 ++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 46 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:88:5: error: unknown type name ‘Tree_Node’; did you mean ‘TreeNode’?
   88 |     Tree_Node *nuevoNodo = malloc(sizeof(Tree_Node));
      |     ^~~~~~~~~
      |     TreeNode
treemap.c:88:42: error: ‘Tree_Node’ undeclared (first use in this function); did you mean ‘TreeNode’?
   88 |     Tree_Node *nuevoNodo = malloc(sizeof(Tree_Node));
      |                                          ^~~~~~~~~
      |                                          TreeNode
treemap.c:88:42: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:91:14: error: request for member ‘parent’ in something not a structure or union
   91 |     nuevoNodo->parent = NULL;
      |              ^~
treemap.c:92:14: error: request for member ‘left’ in something not a structure or union
   92 |     nuevoNodo->left = NULL;
      |              ^~
treemap.c:93:14: error: request for member ‘right’ in something not a structure or union
   93 |     nuevoNodo->right = NULL;
      |              ^~
treemap.c:94:14: error: request for member ‘pair’ in something not a structure or union
   94 |     nuevoNodo->pair->key = key;
      |              ^~
treemap.c:95:14: error: request for member ‘pair’ in something not a structure or union
   95 |     nuevoNodo->pair->value = value;
      |              ^~
treemap.c:97:39: error: assignment to ‘TreeNode *’ from incompatible pointer type ‘int *’ [-Wincompatible-pointer-types]
   97 |     if(tree->root == NULL) tree->root = nuevoNodo;
      |                                       ^
treemap.c:100:16: error: ‘auxiliar’ undeclared (first use in this function)
  100 |     Tree_Node *auxiliar = tree->root;
      |                ^~~~~~~~
treemap.c:101:11: error: ‘true’ undeclared (first use in this function)
  101 |     while(true){
      |           ^~~~
treemap.c:7:1: note: ‘true’ is defined in header ‘<stdbool.h>’; this is probably fixable by adding ‘#include <stdbool.h>’
    6 | #include "treemap.h"
  +++ |+#include <stdbool.h>
    7 | 
treemap.c:104:24: error: invalid type argument of unary ‘*’ (have ‘int’)
  104 |         if(*llaveOri < *llaveAux)
      |                        ^~~~~~~~~
treemap.c:109:31: error: assignment to ‘TreeNode *’ from incompatible pointer type ‘int *’ [-Wincompatible-pointer-types]
  109 |                 tree->current = nuevoNodo;
      |                               ^
treemap.c:115:29: error: invalid type argument of unary ‘*’ (have ‘int’)
  115 |         else if(*llaveOri > *llaveAux)
      |                             ^~~~~~~~~
treemap.c:120:35: error: assignment to ‘TreeNode *’ from incompatible pointer type ‘int *’ [-Wincompatible-pointer-types]
  120 |                     tree->current = nuevoNodo;
      |                                   ^
fdd4c6c
